tests/ui/option.stderr
error: unexpected option syntax
 --> tests/ui/option.rs:6:28
  |
6 | struct StructNoOption<T>(#[derive_where] PhantomData<T>);
  |                            ^^^^^^^^^^^^

error: unexpected option syntax
 --> tests/ui/option.rs:9:31
  |
9 | struct StructWrongSyntax<T>(#[derive_where = "default"] PhantomData<T>);
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:13:4
   |
13 |     #[derive_where]
   |       ^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:19:4
   |
19 |     #[derive_where = "default"]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown option
  --> tests/ui/option.rs:24:46
   |
24 | struct StructInvalidOption<T>(#[derive_where(option)] PhantomData<T>);
   |                                              ^^^^^^

error: unknown option
  --> tests/ui/option.rs:28:17
   |
28 |     #[derive_where(option)]
   |                    ^^^^^^
